@@ -105,9 +105,9 @@ TEST_CASES = [
     ),
     (
         "2012-10-30T08:55:22.1234567Z",
-        datetime(2012, 10, 30, 8, 55, 22, 123457, tzinfo=UTC),
+        datetime(2012, 10, 30, 8, 55, 22, 123456, tzinfo=UTC),
         DATE_EXT_COMPLETE + "T" + TIME_EXT_COMPLETE + ".%f" + TZ_BAS,
-        "2012-10-30T08:55:22.123457Z",
+        "2012-10-30T08:55:22.123456Z",
     ),
     (
         "2012-10-30T08:55:22.1234561Z",
