@@ -24,7 +24,12 @@ TEST_CASES = [
     # test precision
     ("15:33:42.123456", time(15, 33, 42, 123456), None),
     ("15:33:42.1234564", time(15, 33, 42, 123456), None),
-    ("15:33:42.1234557", time(15, 33, 42, 123456), None),
+    ("15:33:42.1234557", time(15, 33, 42, 123455), None),
+    (
+        "10:59:59.9999999Z",
+        time(10, 59, 59, 999999, tzinfo=UTC),
+        None,
+    ),  # TIME_EXT_COMPLETE + TZ_EXT),
     ("2320,8", time(23, 20, 48), None),
     ("23:20,8", time(23, 20, 48), None),
     ("23,3", time(23, 18), None),
